# Copyright 2017 The Procyon Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

source_set("procyon") {
  public_deps = [
    "src/c:procyon",
  ]
}

source_set("procyon-cpp") {
  public_deps = [
    "src/cpp:procyon-cpp",
  ]
}

source_set("pnfmt") {
  public_deps = [
    "src/bin:pnfmt",
  ]
}

source_set("pn2json") {
  public_deps = [
    "src/bin:pn2json",
  ]
}
